kubernetes/deployment/kgateway/setup/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: services-gateway
spec:
  gatewayClassName: kgateway
  # infrastructure:
  #   parametersRef:
  #     group: gateway.kgateway.dev
  #     kind: GatewayParameters
  #     name: nodeport-gw-params
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: All
